# UnrealityTV

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER_WORKFLOW.md  GPU_DIAGNOSTICS.md  README.md  coverage.xml  pyproject.toml  test_visual_duplicates.py
.github/: BRANCH_PROTECTION_SETUP.md  CI_CD_GUIDE.md  PR_WORKFLOW_SUMMARY.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: PHASE_8.md  PROJECT_PLAN.md
docs/research/: scene-detection-approaches.md
scripts/: README.md  create-pr.sh  setup-dev.sh
src/unrealitytv/: __init__.py  applicator.py  cache.py  cli.py  config.py  db.py  metrics.py  models.py  orchestrator.py  parsers.py
src/unrealitytv/analysis/: __init__.py  cache.py  pipeline.py
src/unrealitytv/audio/: __init__.py  extract.py
src/unrealitytv/detection/: __init__.py  patterns.py
src/unrealitytv/detectors/: cache.py  credits_detector.py  orchestrator.py  scene_detector.py  silence_detector.py  transnetv2_detector.py  visual_duplicate_detector.py
src/unrealitytv/migrations/: 001_initial.sql  001_initial_schema.sql
tests/: __init__.py  conftest.py  test_analysis_cache.py  test_analysis_pipeline.py  test_audio_extract.py  test_cache.py  test_cli.py  test_config_enhanced.py  test_config_phase7.py  test_config_phase8.py  test_credits_detector.py  test_db.py  test_db_repositories.py  test_detection_cache.py  test_duplicate_finder.py  test_extract_frames.py  test_frame_hash_repository.py  test_hashing.py  test_metrics.py  test_models.py  test_orchestrator.py  test_orchestrator_analysis.py  test_orchestrator_phase7.py  test_orchestrator_phase8.py  test_parsers.py  test_pattern_matching.py  test_plex_client.py  test_plex_markers.py  test_scene_detector.py  test_segment_applicator.py  test_silence_detector.py  test_transcription_cache.py  test_transnetv2_detector.py  test_visual_duplicate_detector.py  test_whisper_transcription.py
(+10 files in other folders)
